--- a/index.yaml
+++ b/index.yaml
@@ -232,3 +232,4 @@ relazioni:
     - {da: henry-kissinger, a: klaus-schwab}
     - {da: gianni-agnelli, a: john-elkann}
     - {da: angela-merkel, a: ursula-von-der-leyen}
+    - {da: jacques-delors, a: jean-claude-juncker}
